# connect4-python

./: .gitignore  MANIFEST.in  Makefile  README.md  perf.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
scripts/: perf.py  play.py  play_agent.py  train.py
src/connect4/: __init__.py  agent.py  game.py  module.py
tests/: test_connect4.py
