[project]
name = "connect4"
authors = [
    {name="Steve Olsen", email="steve@steve.computer"},
]
description = "connect4 ai"
requires-python = "~=3.10"
dependencies = ["numpy", "numba"]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["pytest", "black", "mypy"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["connect4*"]